syntax = "proto3";

package diodbserver;

message DBInfoRequest {
}
message DBInfo {
  // The current version of DioDB running.
  string db_version = 1;

  // The number of keys stored in the database.
  int64 num_keys = 2;

  // The number of bytes stored in the database.
  int64 num_bytes = 3;
}

message HolyDiverRequest {
}
message HolyDiverReply {
  string lyrics = 1;
}

service DioDBServerService {
  rpc GetDBInfo(DBInfoRequest) returns (DBInfo) {}
  rpc HolyDiver(HolyDiverRequest) returns (HolyDiverReply) {}
}
